--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "memorystore": "^1.6.7",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "node.js": "^0.0.1-security",
