--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "projectgunautotrader",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lotzilla/demo-site.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
@@ -26,7 +39,15 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "css-loader": "^6.7.3",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Lotzilla/demo-site/issues"
+  },
+  "homepage": "https://github.com/Lotzilla/demo-site#readme",
+  "description": ""
 }
