--- a/package.json
+++ b/package.json
@@ -13,37 +13,39 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.0",
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "formidable": "^2.1.1",
+    "fs": "^0.0.1-security",
+    "gm": "^1.25.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "memorystore": "^1.6.7",
+    "mogodb": "^0.0.1-security",
+    "mongodb": "^5.4.0",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node.js": "^0.0.1-security",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "path": "^0.12.7",
     "router": "^1.3.7",
     "stripe": "^11.10.0",
     "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "css-loader": "^6.7.3",
-    "sass-loader": "^13.2.2",
-    "style-loader": "^3.3.2",
-    "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.2"
   },
   "bugs": {
     "url": "https://github.com/Lotzilla/demo-site/issues"
